# yart

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  flake.nix
src/: CMakeLists.txt  main.cpp
src/lights/: point_light.h
src/object/: CMakeLists.txt  material.h  object.h  object_factory.h  plane.cpp  plane.h  ray.cpp  ray.h  sphere.cpp  sphere.h
src/renderer/: CMakeLists.txt  bsdf.h  diffuse_functions.h  render_functions.h  renderer.cpp  renderer.h  renderer.hxx  sampler.cpp  sampler.hpp  specular_functions.h  window.cpp  window.h
src/scene/: CMakeLists.txt  camera.cpp  camera.h  scene.cpp  scene.h
src/utils/: logger.h  math.h  misc.h  singleton.h  traits.h  view_ptr.h
tests/: CMakeLists.txt
tests/utils/: CMakeLists.txt  utils.cpp
